
No release numbers
------------------
 - Thu Aug 31 23:40:23 UTC 2000
   - Threw in aim_select modification from nicolas
   - Remove stray debugging printf in aim_tlv

 - Mon Aug 28 03:11:15 GMT 2000
   - Adds lots of comments
   - Add AIM_CLASS_ALLUSERS constant for setgrouppermmask()
   - Add warnings support (jbm)

 - Mon Aug 21 22:00:18 UTC 2000
   - Implement SNAC login MD5 (thanks to Sonuvbob for that one)
   - Clear out all that old login cruft. Much cleaner now.
   - REQUIRES CLIENT CHANGES (see faimtest)

 - Fri Aug 18 19:52:54 UTC 2000
   - Fix the non-pthread bug

 - Thu Aug 17 23:19:40 UTC 2000
   - A few more leak fixes (only a few left to go...)

 - Thu Aug 17 23:08:08 UTC 2000
   - More leak fixes (eric, eric, eric...)

 - Thu Aug 17 22:53:03 UTC 2000
   - Change the SNAC cache to a hash instead of list
   - Fixed a few leaks relating to aim_gettlv_str()

 - Thu Aug 17 14:04:18 UTC 2000
   - Fix the fd closing bug introduced last week

 - Tue Aug  8 04:25:35 UTC 2000
   - Preserve subtype and priv after aim_conn_close

 - Tue Aug  8 04:15:47 UTC 2000
   - Fixed double-calling of faim_mutex_init
   - conn->type preserved after aim_conn_close

 - Mon Jul 17 01:56:31 UTC 2000
   - Added 0004/000c callback (for message acknowledgments)
      - This goes with the AIM_IMFLAGS_ACK option that has been there
        for ages now.  When you send a message with that option, you'll
        get a message back containing the screenname, telling you it was sent.
   - Moved the aim_conn_kill's out of aim_get_command() and into
      the client.  They're only closed in there now.  This is so that you 
      can detect what type of connection died.  You'll want to handle
      BOS and chat connections in special ways most likely.  You'll also
      need to call aim_conn_kill when you're done with it.
   - Added/fixed the Rate Change handlers.  Now passes up a long that
      should contain a number.  I'm currently in pattern-searching mode.
